--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p><h1>「Webコンテンツ作成」の成果</h1>
+    <h2>本テーマの学習目的</h2>
+    ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。（1000文字）
+    <h2>プロジェクト課題について</h2>
+    <p>プロジェクト課題では。。。を実施する。ここで表示するデータは。。。（200文字以上）</p>
+    <p>プロジェクト課題で作成したページ:<a href=""
+        title="project.html"
+        target="_blank"></a></p>
+    <h2>数当てゲーム</h2>
+    <p>この課題では。。。を実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
+    <p>数当てゲームのページ:<a href=""
+        title="kazuate.html"
+        target="_blank"></a></p>
+    <h2>毎回の実験で作成したページ</h2>
+    <h3>第1回wwwとHTML</h3>
+    <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <p>演習の成績</p>
+    <ul>
+    <li><a href=""
+        title="演習1-3:HTML文書の作成"
+        target="_blank"></a></li>
+    <li><a href=""
+        title="演習1-4:HTMLのさまざまな要素"
+        target="_blank"></a></li>
+    <h2>第2回CSSによるWebページの装飾</h2>
+    <h2>第3回JavaScriptの基本</h2>
+    <h2>第4回DOMとJavaScript</h2>
+    <h2>第5回イベント処理</h2>
+    </ul>
+    </p>
   </body>
 </html>
