--- a/practice-css/browser-intro.html
+++ b/practice-css/browser-intro.html
@@ -19,6 +19,7 @@
 	<li><a href="https://ja.wikipedia.org/wiki/Safari">Safari</a></li>
 	<li><a href="https://ja.wikipedia.org/wiki/Microsoft_Edge">Microsoft Edge</a></li>
 	<li><a href="https://ja.wikipedia.org/wiki/Mozilla_Firefox">Mozilla Firefox</a></li>
+	<li><a href="practice-css/browser-intro.html_Firefox">Mozilla Firefox</a></li>
 </ul>
 
 
