インデックス

--- a/practice-css/browser-intro.html
+++ b/practice-css/browser-intro.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>ウェブブラウザの紹介</title>
+	<link rel="stylesheet"
+	href="browser-intro.css">
 </head>
 
 <body>
@@ -19,7 +21,6 @@
 	<li><a href="https://ja.wikipedia.org/wiki/Safari">Safari</a></li>
 	<li><a href="https://ja.wikipedia.org/wiki/Microsoft_Edge">Microsoft Edge</a></li>
 	<li><a href="https://ja.wikipedia.org/wiki/Mozilla_Firefox">Mozilla Firefox</a></li>
-	<li><a href="practice-css/browser-intro.html_Firefox">Mozilla Firefox</a></li>
 </ul>
 
 
