--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
     <p>演習の成績</p>
     <ul>
-    <li><a href=""
-        title="演習1-3:HTML文書の作成"
-        target="_blank"></a></li>
-    <li><a href=""
-        title="演習1-4:HTMLのさまざまな要素"
-        target="_blank"></a></li>
+    <li><a href="practice-html/structure.html"
+        target="_blank">演習1-3:HTML文書の作成</a></li>
+    <li><a href="practice-html/elements.html"
+        target="_blank">演習1-4:HTMLのさまざまな要素</a></li>
     <h2>第2回CSSによるWebページの装飾</h2>
     <h2>第3回JavaScriptの基本</h2>
     <h2>第4回DOMとJavaScript</h2>
