--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -25,7 +25,7 @@
 	</ol>
 	<!--小見出し: --><h2>ハイパーリンク</h2>
 	<ul>
-		<li><a href="structure.html"
+		<li><a href="../structure.html"
 			target="_blank">演習1-3のHTMLファイル</a></li>
 		<li><a href="../index.html"
 			target="_blank">index.html</a></li>
