課題インデックス

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         target="_blank"></a></p>
     <h2>数当てゲーム</h2>
     <p>この課題では。。。を実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
-    <p>数当てゲームのページ:<a href=""
-        title="kazuate.html"
-        target="_blank"></a></p>
+    <p>数当てゲームのページ:<a href="kazuate.html"
+        target="_blank">kazuate.html</a></p>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第1回wwwとHTML</h3>
     <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
@@ -28,8 +27,16 @@
     <li><a href="practice-html/elements.html"
         target="_blank">演習1-4:HTMLのさまざまな要素</a></li>
     <h2>第2回CSSによるWebページの装飾</h2>
+    <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <li><a href="practice-css/browser-intro.html"
+        target="_blank">practice-css/browser-intro.html</a></li>
     <h2>第3回JavaScriptの基本</h2>
+    <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <li><a href="practice-js/obj-practice.html"
+      target="_blank">practice-js/obj-practice.html</a></li>
     <h2>第4回DOMとJavaScript</h2>
+    <li><a href="practice-dom/dom-exercise.html"
+      target="_blank">practice-dom/dom-exercise.html</a></li>
     <h2>第5回イベント処理</h2>
     </ul>
     </p>
