--- a/practice-dom/dom-exercise.html
+++ b/practice-dom/dom-exercise.html
@@ -6,7 +6,7 @@
 	<script src="dom-exercise.js" defer></script>
   </head>
 
-  <body>
+  
 	  <!-- 注意: 
 		  このファイルをエディタで直接編集しないこと！
 	  -->
@@ -14,15 +14,31 @@
 	  <h1>DOM プログラミング演習</h1>
 
 	  <h2 id="ex42">練習4-2: 説明文の追加</h2>
-
+	  <!--<p style="text-emphasis: sesame green;">写真表と都市の都市の緯度経度のページです</p>p>-->
 	  <h2>練習4-3: 写真表を作る</h2>
-	  <div id="phototable"></div>
+	  <div id="phototable">
+	  <!--<p>
+		<img src="taro.png">
+	  </p>p>
+	  <p>
+		<img src="jiro.png">
+	  </p>
+	  <p>
+		<img src="hanako.png">
+	  </p>p>-->
+	</div>
 
 	  <h2>練習4-4と4-5: 都市の緯度経度を表示する</h2>
 	  <ul id="location">
-		<li>この要素は JavaScript プログラムで削除すること</li>
-		<li>この要素は JavaScript プログラムで削除すること</li>
-		<li>この要素は JavaScript プログラムで削除すること</li>
+		<!--<li>
+		  札幌 ... 緯度:43.06417, 経度:141.34694
+		</li>>
+		<li>
+		  仙台 ... 緯度:38.26889, 経度:140.87194
+		</li>>	
+		<li>
+		  新宿 ... 経度:35.68944, 経度:139.69167
+		</li>li>-->
 	  </ul>
   </body>
 </html>
