--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。（1000文字）
     <h2>プロジェクト課題について</h2>
     <p>プロジェクト課題では。。。を実施する。ここで表示するデータは。。。（200文字以上）</p>
-    <p>プロジェクト課題で作成したページ:<a href=""
-        title="project.html"
-        target="_blank"></a></p>
+    <p>プロジェクト課題で作成したページ:<a href="project.html"
+        target="_blank">project.html</a></p>
     <h2>数当てゲーム</h2>
     <p>この課題では。。。を実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
     <p>数当てゲームのページ:<a href="kazuate.html"
