--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>My test page</title><style>
+      p {
+        color: green;
+      }
+    </style>
+
   </head>
   <body>
     <p><h1>「Webコンテンツ作成」の成果</h1>
