--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   </head>
   <body>
-    <p><h1>「Webコンテンツ作成」の成果</h1>
+    <h1>「Webコンテンツ作成」の成果</h1>
     <h2>本テーマの学習目的</h2>
-    ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。（1000文字）
+    <p>ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。（1000文字）</p>
     <h2>プロジェクト課題について</h2>
     <p>プロジェクト課題では。。。を実施する。ここで表示するデータは。。。（200文字以上）</p>
     <p>プロジェクト課題で作成したページ:<a href="project.html"
