--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title><style>
-      p {
-        color: green;
-      }
-    </style>
-
+    <title>My test page</title>
   </head>
   <body>
     <h1>「Webコンテンツ作成」の成果</h1>
     <h2>本テーマの学習目的</h2>
+    <style>h2 {
+      text-shadow:navy;
+    }</style>
     <p>ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。（1000文字）</p>
     <h2>プロジェクト課題について</h2>
     <p>プロジェクト課題では。。。を実施する。ここで表示するデータは。。。（200文字以上）</p>
