インデックス

--- a/index.html
+++ b/index.html
@@ -3,42 +3,55 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>「Webコンテンツ作成」の成果</h1>
-    <h2>本テーマの学習目的</h2>
-    <style>h2 {
-      text-shadow:navy;
-    }</style>
-    <p>ここには学習目標を記載してください。シラバスや講義資料から読み取りましょう。（1000文字）</p>
+    <h2>本テーマの学習目標</h2>
+    <p>本テーマではWebページを自身で作成するスキルを身につけることを大前提とし、その中で本講義では
+    「ハイパーリンクの貼り付け」
+     「CSSによるWebページの装飾」
+     「JavaScriptの理解」
+     「イベント処理」をはじめとした様々な処理について学ぶ事を目的とする。</p>
     <h2>プロジェクト課題について</h2>
-    <p>プロジェクト課題では。。。を実施する。ここで表示するデータは。。。（200文字以上）</p>
+    <p>プロジェクト課題ではWWWのサーバへ検索し、サーバから届いたデータを
+      Webページとして整形するようなWebアプリケーションの作成を実施する。
+      ここで表示するデータは「NHKの番組表」「グルメ情報」「世界の天気」
+      の三種類のいずれかとし、その情報を詳細に結果として表示できるようにする。
+      また、それに伴い、(また後でやるよーん)
+      （200文字以上）</p>
     <p>プロジェクト課題で作成したページ:<a href="project.html"
         target="_blank">project.html</a></p>
     <h2>数当てゲーム</h2>
-    <p>この課題では。。。を実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
+    <p>この課題ではを実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
     <p>数当てゲームのページ:<a href="kazuate.html"
         target="_blank">kazuate.html</a></p>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第1回wwwとHTML</h3>
-    <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <p>今回はについて学びました。また次の課題に取り組みました。。。（100文字以上）</p>
     <p>演習の成績</p>
     <ul>
     <li><a href="practice-html/structure.html"
         target="_blank">演習1-3:HTML文書の作成</a></li>
     <li><a href="practice-html/elements.html"
         target="_blank">演習1-4:HTMLのさまざまな要素</a></li>
+    </ul>
     <h2>第2回CSSによるWebページの装飾</h2>
-    <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <ul>
     <li><a href="practice-css/browser-intro.html"
         target="_blank">practice-css/browser-intro.html</a></li>
+    </ul>
     <h2>第3回JavaScriptの基本</h2>
     <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <ul>
     <li><a href="practice-js/obj-practice.html"
       target="_blank">practice-js/obj-practice.html</a></li>
+    </ul>
     <h2>第4回DOMとJavaScript</h2>
-    <li><a href="practice-dom/dom-exercise.html"
+    <ul>
+      <li><a href="practice-dom/dom-exercise.html"
       target="_blank">practice-dom/dom-exercise.html</a></li>
+      </ul>
     <h2>第5回イベント処理</h2>
     </ul>
     </p>
