--- a/project.html
+++ b/project.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>数当てゲーム</title>
+    <title>NHLの番組表</title>
+    <script src="https://www.nishita-lab.org/web-contents/jsons/nhk/g1-0000-j.json"></script>
     <script src="kazuate.js" defer></script>
   </head>
 
@@ -13,3 +14,7 @@
     <p id="result">将来ここに判定結果を表示します</p>
   </body>
 </html>
+<!--let s= g1 ;
+let g= 0000 ;
+
+nnk/'+s+'-'+g+'-j.json';
