インデックス

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <body>
     <h1>「Webコンテンツ作成」の成果</h1>
     <h2>本テーマの学習目標</h2>
-    <p>本テーマではWebページを自身で作成するスキルを身につけることを大前提とし、その中で本講義では
+    <p>本テーマではWebページを自身で作成するスキルを身につけることを大前提とし、
+      その中で本講義では
     「ハイパーリンクの貼り付け」
      「CSSによるWebページの装飾」
-     「JavaScriptの理解」
+     <p>「JavaScriptの理解」
      「イベント処理」をはじめとした様々な処理について学ぶ事を目的とする。</p>
     <h2>プロジェクト課題について</h2>
     <p>プロジェクト課題ではWWWのサーバへ検索し、サーバから届いたデータを
       Webページとして整形するようなWebアプリケーションの作成を実施する。
-      ここで表示するデータは「NHKの番組表」「グルメ情報」「世界の天気」
+      ここで表示するデータは「NHKの番組表」<p>「グルメ情報」「世界の天気」
       の三種類のいずれかとし、その情報を詳細に結果として表示できるようにする。
       また、それに伴い、(また後でやるよーん)
       （200文字以上）</p>
@@ -26,9 +27,12 @@
     <p>この課題ではを実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
     <p>数当てゲームのページ:<a href="kazuate.html"
         target="_blank">kazuate.html</a></p>
-    <h2>毎回の実験で作成したページ</h2>
-    <h3>第1回wwwとHTML</h3>
-    <p>今回はについて学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <h1>毎回の実験で作成したページ</h1>
+    <h2>第1回wwwとHTML</h2>
+    <p>今回は最も基本的なWebページの作成方法である「通常のテキストの表示」
+      「改行でのテキスト表示」「見出しの作り方」「ハイパーリンクの貼り付け方」
+      「画像の表示のさせ方」
+      などについて学習した。</p>
     <p>演習の成績</p>
     <ul>
     <li><a href="practice-html/structure.html"
@@ -37,22 +41,34 @@
         target="_blank">演習1-4:HTMLのさまざまな要素</a></li>
     </ul>
     <h2>第2回CSSによるWebページの装飾</h2>
+    <p>今回の講義では、CSSというhtmlで制作した要素を装飾する言語について学んだ。
+      この言語では、Web上のテキストに色をつけたり、背景の色を変えることができる。
+      これにより、Webページを見やすくすることができる。
+    </p>
     <ul>
     <li><a href="practice-css/browser-intro.html"
         target="_blank">practice-css/browser-intro.html</a></li>
     </ul>
     <h2>第3回JavaScriptの基本</h2>
-    <p>今回は次の。。。。について学びました。また次の課題に取り組みました。。。（100文字以上）</p>
+    <p>今回はJavaScriptという、htmlで制作したWebページに動きを付ける言語について学んだ。
+      この言語では、今までhtmlとCSSだけでは、ただテキストが書かれていただけだったWeBページに
+      自動更新やアニメーションなどを付け加え動的なページにすることができる。</p>
     <ul>
     <li><a href="practice-js/obj-practice.html"
       target="_blank">practice-js/obj-practice.html</a></li>
     </ul>
     <h2>第4回DOMとJavaScript</h2>
+    <p>
+      今回
+    </p>
     <ul>
       <li><a href="practice-dom/dom-exercise.html"
       target="_blank">practice-dom/dom-exercise.html</a></li>
       </ul>
     <h2>第5回イベント処理</h2>
+    <p>
+      今回
+    </p>
     </ul>
     </p>
   </body>
