--- a/project.html
+++ b/project.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>NHLの番組表</title>
-    <script src="https://www.nishita-lab.org/web-contents/jsons/nhk/g1-0000-j.json"></script>
-    <script src="kazuate.js" defer></script>
+    <title>NHKの番組表</title>
+    <script src="tv-program.js" defer></script>
   </head>
 
   <body>
-    <h1>数当てゲーム</h1>
-    <p>将来ここにはテキストボックスとボタンを設置します</p>
-    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
-    <p id="result">将来ここに判定結果を表示します</p>
+    <h1>NHKの番組表</h1>
+   
+    
+  
   </body>
 </html>
 <!--let s= g1 ;
