インデックス

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>プロジェクト課題で作成したページ:<a href="project.html"
         target="_blank">project.html</a></p>
     <h2>数当てゲーム</h2>
-    <p>この課題ではを実施する。。。（この課題は第3回から第5回に取り組みます。200文字以上）</p>
+    <p>この課題ではを実施する。。。（この課題は第3回から第5回に取り組みます。300文字以上）</p>
     <p>数当てゲームのページ:<a href="kazuate.html"
         target="_blank">kazuate.html</a></p>
     <h1>毎回の実験で作成したページ</h1>
@@ -69,7 +69,22 @@
     <p>
       今回
     </p>
+    <ul>
+      <li><a href="practice-event/event-intro.html"
+        target="_blank">practice-dom/dom-exercise.html</a></li>
     </ul>
+    </p>
+    <h2>感想・反省</h2>
+    <p>
+      『第一回から全六回の講義や課題を経て学んだこと』
+      <p>
+      ・HTMLは要素で作られる:htmlでWebページを作成する際は、
+      タグと呼ばれる要素で文章を囲むことによって様々な表現ができる。
+      例えば、”p”という要素で文章を囲むことによって、その文章をひとつの段落として構成
+      することができる。また、タグには開始と終了の二種があり＜要素の名前＞から始まり
+      ＜/要素の名前＞でその段落を閉じることができる。
+      <p>
+      ・HTMLで作成デバック
     </p>
   </body>
 </html>
