インデックス

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       ここで表示するデータは「NHKの番組表」<p>「グルメ情報」「世界の天気」
       の三種類のいずれかとし、その情報を詳細に結果として表示できるようにする。
       
-      （200文字以上）</p>
+      </p>
     <p>プロジェクト課題で作成したページ:<a href="project.html"
         target="_blank">project.html</a></p>
     <h2>数当てゲーム</h2>
@@ -76,15 +76,19 @@
     </p>
     <h2>感想・反省</h2>
     <p>
-      『第一回から全六回の講義や課題を経て学んだこと』
+      『工夫点』
       <p>
-      ・HTMLは要素で作られる:htmlでWebページを作成する際は、
+      ・ページを見やすくするため文章の段落分けをした:htmlでWebページを作成する際は、
       タグと呼ばれる要素で文章を囲むことによって様々な表現ができる。
       例えば、”p”という要素で文章を囲むことによって、その文章をひとつの段落として構成
       することができる。また、タグには開始と終了の二種があり＜要素の名前＞から始まり
-      ＜/要素の名前＞でその段落を閉じることができる。
+      ＜/要素の名前＞でその段落を閉じることができる。この機能を利用し、作成したページの
+      文章が中途半端に途切れて次の行に進むことを阻止し、いい区切りで改行することでページを
+      見やすくした。
       <p>
-      ・HTMLで作成デバック
+      ・CSS機能により見出しに色を着けた：htmlでは、〇〇.cssと記述したファイルを作成し、
+      その中で様々な記述をすることでhtmlで作成したページの文章に色を着けたり、
+      背景の色を変えたりすることができる。例えば、html内のp要素に着色をした
     </p>
   </body>
 </html>
