インデックス

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     </ul>
     <h2>第4回DOMとJavaScript</h2>
     <p>
-      今回
+      今回はDOMという、Webコンテンツを表現するデータ構造について学んだ。
+      これとJavaScriptを使用することにより、Webコンテンツの内容を読み取ったり、
+      コンテンツに変更を加えたりすることができる。
     </p>
     <ul>
       <li><a href="practice-dom/dom-exercise.html"
@@ -67,16 +69,20 @@
       </ul>
     <h2>第5回イベント処理</h2>
     <p>
-      今回
+      今回はイベント処理という、Webページ上でユーザが何かしらの動作をした際に
+      要素がその動作に対して反応するようにすることができる方法を学んだ。
+      例:ユーザーがイベント処理を行った要素をクリックすると、色が変わるなど。
+
     </p>
     <ul>
       <li><a href="practice-event/event-intro.html"
         target="_blank">practice-dom/dom-exercise.html</a></li>
+        <li><a href="practice-event/event-list.html"
+          target="_blank">practice-dom/dom-exercise.html</a></li>
     </ul>
     </p>
     <h2>感想・反省</h2>
-    <p>
-      『工夫点』
+    <h3>『工夫した点』</h3>
       <p>
       ・ページを見やすくするため文章の段落分けをした:htmlでWebページを作成する際は、
       タグと呼ばれる要素で文章を囲むことによって様々な表現ができる。
@@ -88,7 +94,29 @@
       <p>
       ・CSS機能により見出しに色を着けた：htmlでは、〇〇.cssと記述したファイルを作成し、
       その中で様々な記述をすることでhtmlで作成したページの文章に色を着けたり、
-      背景の色を変えたりすることができる。例えば、html内のp要素に着色をした
+      背景の色を変えたりすることができる。例えば、html内のp要素の文章を緑色に着色をしたい場合、
+      作成したcssファイル内のp要素の後に{}をつけ、その中にcolor:greenと記述することによって
+      緑色に変えることができる。今回の課題ではこのCSS機能によって各見出しに帯を引いた。
+      <h3>『苦労した点』</h3>
+      <p>
+      ・ハイパーリンクの貼り付け:初めのうちはハイパーリンクの貼り付け方が分からずリンクを押しても指定した
+      ページに飛ばないといったことが多発したが、htmlのなかに、”a”の要素を追加し、href属性の中にURL、
+      title属性の中にリンクの名前、target属性の中に”_blank”を設置することにより問題なくURLを貼り付ける
+      ことができた。
+      <p>
+      ・第4回で作成した「dom-exercise.html」:この課題で最も苦労した点は、三つの画像の貼り付けをjsのファイル
+      内で操作しhtmlに表示させる部分が最も難しいと感じた。初めのうちは、一つの画像に対していくつも要素を重ねて
+      しまい、画像が表示されないことがあったり、for文を使用していない為に同じ文を複数回書いてしまいコードがとても
+      見辛いものになってしまうことがあった。
+      <h3>『反省点』</h3>
+      <p>
+      
+      </p>
+      <h3>『今後の活動』</h3>
+      <p>
+      ・今回、情報メディア実験の前半で学んだWebページ作成の方法を活用し、自分が所属している部活のWebページを新たに
+      作成しようと思った。その為に今回の実験では学びきれなかったこと、よりページを見やすくするための拡張機能などを
+      を勉強しようと思う。
     </p>
   </body>
 </html>
