--- a/kazuate.html
+++ b/kazuate.html
@@ -9,10 +9,10 @@
   <body>
     <h1>数当てゲーム</h1>
     <lavel for="seisu">1から10の間の整数: </lavel>
-      <input type="text" name="seisu" id="seisu" size="10">
+      <input type="text" name="seisu" id="seisu" size="1">
       <button id="print">回答</button>
 
-    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
-    <p id="result"></p>
+    <!--<p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
+    <p id="result"></p>-->
   </body>
 </html>
