--- a/kazuate.html
+++ b/kazuate.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>数当てゲーム</title>
-    <script src="kazuate.js" defer></script>
-  </head>
-
-  <body>
+    <script src="kazuate,js" defer=""></script>
+    </head>
+    <body>
     <h1>数当てゲーム</h1>
     <lavel for="seisu">1から10の間の整数: </lavel>
-      <input type="text" name="seisu" id="seisu" size="1">
-      <button id="print">回答</button>
+    <input id="seisu" type="text" name="seisu" size="2">
 
-    <!--<p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
-    <p id="result"></p>-->
+    <button id="kaitou">回答</button>
+    <p>
+      <span id="kaisu">1</span>
+      回目の予想:
+      <span id="answer">1</span>
+    </p>
+    <p id="result">まちがい.答えはもっと大きいです.</p>
   </body>
-</html>
+  </html>
+    
