--- a/index.html
+++ b/index.html
@@ -110,11 +110,12 @@
       見辛いものになってしまうことがあった。
       <h3>『反省点』</h3>
       <p>
-      
+      文章中にもアンダーラインや強調を使った方が、より文章が見やすかったと思うので今後
+      改善していこうと思う。
       </p>
       <h3>『今後の活動』</h3>
       <p>
-      ・今回、情報メディア実験の前半で学んだWebページ作成の方法を活用し、自分が所属している部活のWebページを新たに
+      今回、情報メディア実験の前半で学んだWebページ作成の方法を活用し、自分が所属している部活のWebページを新たに
       作成しようと思った。その為に今回の実験では学びきれなかったこと、よりページを見やすくするための拡張機能などを
       を勉強しようと思う。
     </p>
