--- a/kazuate.html
+++ b/kazuate.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>数当てゲーム</title>
-    <script src="kazuate,js" defer=""></script>
+    <script src="kazuate.js" defer=""></script>
     </head>
     <body>
     <h1>数当てゲーム</h1>
