--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
     <p>プロジェクト課題で作成したページ:<a href="project.html"
         target="_blank">project.html</a></p>
     <h2>数当てゲーム</h2>
-    <p>この課題ではを実施する。。。（この課題は第3回から第5回に取り組みます。300文字以上）</p>
+    <p>予想に1から10の数を入力して回答ボタンを押す。
+      if文で正解の判定を行い間違えた場合は予想が答えより大きいか小さいかのヒントが表示される。そのヒントを参考に2、3回入力する。
+      入力する毎に回数が増えていきチャンスは3回まででそれまでに答えを当てれなかったら3回目で答えを表示し、
+      4回目以降は回答が合っていても同じ文がずっと表示される。
+      ここからはプログラムの説明でspan#kaisuやspan#answerの要素(回数や予想)をHTMLに表示される。
+      そして、p#resultの要素で答えの判定とヒントを表示される。入力された数字(文字列)をNumberで整数に変換する。
+      回数、予想、結果をそれぞれHTMLから検索して変数をJavaScriptで作って表示させている。</p>
     <p>数当てゲームのページ:<a href="kazuate.html"
         target="_blank">kazuate.html</a></p>
     <h1>毎回の実験で作成したページ</h1>
